# voice-control

./: .gitignore  README.md  package.json
.github/workflows/: build.yml
config/: phrases.example.json
docs/: voice-control-desktop-plan.md
node-src/: cli.js
node-src/asr/: voskStream.js
node-src/core/: engine.js  parser.js
node-src/electron/: configStore.js  index.html  main.js  preload.js  renderer.js
node-src/executors/: windowsMediaExecutor.js
node-src/service/: voiceSession.js
node-src/tauri/: configStore.js  daemon.js
node-src/tauri-ui/: renderer.js
node-src/utils/: confidence.js
scripts/: send-media-key.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: asr.test.js  configStore.test.js  engine.test.js  parser.test.js  voiceSession.test.js
